--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "name": "create-next-project",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "",
   "main": "index.js",
   "bin": {
     "create-next-project": "cli.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "next build",
+    "deploy": "now",
+    "dev": "next",
+    "start": "next start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "arg": "^4.1.0"
+    "arg": "^4.1.0",
+    "fiona": "^3.3.0"
   }
 }
