remove some clutter, tweak some configs, make description and theme configurable from cli

--- a/skeleton/now.json
+++ b/skeleton/now.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "name": "next-package",
+  "name": "next-project",
   "routes": [
     {
       "src": "^/service-worker.js$",
@@ -16,6 +16,5 @@
       "src": "next.config.js",
       "use": "@now/next"
     }
-  ],
-  "regions": ["all"]
+  ]
 }
