--- a/skeleton/now.json
+++ b/skeleton/now.json
@@ -9,6 +9,10 @@
         "cache-control": "public, max-age=43200, immutable",
         "Service-Worker-Allowed": "/"
       }
+    },
+    {
+      "src": "^/robots.txt$",
+      "dest": "/static/robots.txt"
     }
   ],
   "builds": [
