--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "arg": "^4.1.0"
+    "arg": "^4.1.0",
+    "dotenv": "^8.1.0",
+    "nodemailer-sendgrid-transport": "^0.2.0"
   }
 }
