--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "arg": "^4.1.0",
     "dotenv": "^8.1.0",
+    "next": "9.0.5",
     "nodemailer-sendgrid-transport": "^0.2.0"
   }
 }
