--- a/skeleton/now.json
+++ b/skeleton/now.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "name": "next-project",
+  "name": "contact-test",
   "routes": [
     {
       "src": "^/service-worker.js$",
@@ -14,9 +14,22 @@
       "src": "^/robots.txt$",
       "dest": "/static/robots.txt"
     },
-    { "src": "/static/(.*)", "dest": "/static/$1" },
-    { "src": "/_next/(.*)", "dest": "/_next/$1" },
-    { "src": "/(?<slug>.*)", "dest": "/?slug=/$slug" }
+    {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "/_next/(.*)",
+      "dest": "/_next/$1"
+    },
+    {
+      "src": "/(?<slug>.*)",
+      "dest": "/?slug=/$slug"
+    }
   ],
   "builds": [
     {
